# shogi-ai

./: .gitignore  GLOSSARY.md  PLAN.md  README.md  STATUS.md  pyproject.toml
analysis/: eval_graph.py  kifu_analyzer.py  result.py
benchmark/: self_play.py  tsume.py
book/: base.py  sfen_book.py  strategy.py
core/: board.py  move_gen.py  rules.py  types.py
engine/: __main__.py  config.py  engine.py  usi.py  visualize.py
eval/: base.py  kpp.py  material.py  nnue.py  pst.py
explain/: DESIGN.md  PROGRESS.md  README.md  __init__.py  api.py  commentator.py  context_builder.py
scripts/: create_nnue_weights.py  init_kpp_weights.py
search/: alphabeta.py  base.py  mcts.py  tt.py
solve/: STATUS.md  THEORY.md  VISION.md  run_phase1.py
solve/db/: confirmed.py
solve/retrograde/: solver.py
tests/: test_analysis.py  test_benchmark.py  test_board.py  test_book.py  test_kpp.py  test_mcts.py  test_move_gen.py  test_nnue.py  test_pst.py  test_search.py
train/: dataset.py  kpp_train.py
web/: app.py  index.html  usi_engine.py
